meja/tests/type-variable-alias.meja
let f = fun (x : 'a -> 'b, y : (int as 'a), z : (bool as 'b)) => { };

let g = fun (_: (unit as 'x)) => { };

let h = fun (_: ((bool -> int) -> _ -> _, unit -> unit)) => { };

let x = fun () => {
  let x = (f, g);
  h(x);
};
